--- a/src/components/transition2/features/features.css
+++ b/src/components/transition2/features/features.css
@@ -18,8 +18,7 @@ h2{
     grid-row-end:2;
     text-align:left;
     max-width:30vw;
-    padding:0 2vw;
-    
+    padding:0 2vw;   
   }
 
   .features hr{
@@ -76,12 +75,12 @@ h2{
   }
   
   .features .feature1 .img{
-    margin:auto;
+    margin:2px;
     width:80px;
   }
   
   .features .feature2 .img{
-    margin:auto;
+    margin:2px;
     width:80px;
   }
   
@@ -95,7 +94,7 @@ h2{
       display:block;
       width:100vw;
       margin:0;
-      padding-top:0vh;
+      padding-top:5vh;
     }
     .features h1{
       text-align:center;
