--- a/src/components/transition2/moreinfo/moreinfo.css
+++ b/src/components/transition2/moreinfo/moreinfo.css
@@ -44,9 +44,11 @@
 @media screen and (max-width: 750px){
     .morecontent{
         display:block;
+        margin-top:10vh;
+        margin-bottom:5vh;
     }
 .morecontent h1{
-    margin-top:2rem;
+    margin-top:1rem;
     font-weight:500;
     letter-spacing: 1px;
     line-height: 2.5rem;
